# cavis

./: .gitignore  arr.h  hpp.c  util.h
ca/: CMakeLists.txt
ca/src/: common.h  main.c
ca/src/core/: arr.c  arr.h  log.h  png.c  util.h
ca/src/hpp/: cell.c  cell.h  cfg.c  cfg.h  hpp.c  hpp.h
data/: icons.qrc
data/hpp/0/: env  img
doc/: 20130426.2.odt  abs.20130605.1.odt  issc.odp  issc_text.txt  issc_thesises.doc  mnsk_thesises.odt  proto.txt  statmodtitle.sty  text.bib  text.odt  text.tex  todo.txt
src/: CMakeLists.txt  TODO.txt  buffercontainer.cpp  buffercontainer.h  common.cpp  common.h  main.cpp  visualizzzator.cpp  visualizzzator.h  window.cpp  window.h  windowevent.cpp  windowevent.h
src/base/: makefile  mgr.h  png.c  sys.h
src/buffer/: buffer.cpp  buffer.h
src/buffer/qt_buffer/: openglarea.cpp  openglarea.h  qtsimplebuffer.cpp  qtsimplebuffer.h  renderarea.cpp  renderarea.h  window.cpp
src/ca/: CMakeLists.txt  common.h  const.h  main.c
src/ca/core/: arr.c  arr.h  cfg.h  log.h  main.c  png.h  type.h
src/ca/hpp/: cfg.c  cfg.h  hpp.c  hpp.h
src/ca/sys/: sys.c
src/config/: CMakeLists.txt  config.cpp  config.h  factory.cpp  factory.h
src/config/dll/: CMakeLists.txt  dllconfig.cpp  dllconfig.h  dlltest.c  dlltest.h
src/config/file/: filebasedconfig.cpp  filebasedconfig.h
src/config/local/: localfileconfig.cpp  localfileconfig.h
src/config/network-tcp/: tcpconfig.cpp  tcpconfig.h
src/config/stub/: stubconfig.cpp  stubconfig.h
src/cut/: CMakeLists.txt  cut.cpp  cut.h  gui.cpp  gui.h
src/cut/grayscale/: cutgrayscale.cpp  cutgrayscale.h  gui.cpp  gui.h
src/cut/hpp-loupe/: cuthpploupe.cpp  cuthpploupe.h  gui.cpp  gui.h
src/cut/life/: lifecut.cpp  lifecut.h
src/examples/: hpp.txt
src/layer/: CMakeLists.txt  layer.cpp  layer.h
src/layer/arrow/: arrow.cpp  arrow.h
src/layer/ruler/: ruler.cpp  ruler.h
src/renderer/: CMakeLists.txt  factory.cpp  factory.h  gui.cpp  gui.h  renderer.cpp  renderer.h
src/renderer/grayscale/: grayscale.cpp  grayscale.h  gui.cpp  gui.h
src/renderer/hpp-loupe/: gui.cpp  gui.h  hpploupe.cpp  hpploupe.h
src/renderer/projection/: gui.cpp  gui.h  projection.cpp  projection.h
src/renderer/wave/: gui.cpp  gui.h  wave.cpp  wave.h
src/visualizer/: CMakeLists.txt  visualizzzator.cpp
src/visualizer/buffer/qt_buffer/: renderarea.h
src/visualizer/config/file/: filebasedconfig.h
src/visualizer/cut/life/: lifecut.cpp  lifecut.h
src/workspace/: model.cpp  model.h  project.cpp  project.h  view.cpp  view.h
visualizer/: .gitignore  CMakeLists.txt  Doxyfile  main.cpp  visualizzzator.cpp  visualizzzator.h
visualizer/buffer/: CMakeLists.txt  buffer.cpp  buffer.h
visualizer/buffer/qt_buffer/: qtsimplebuffer.h  renderarea.cpp  window.cpp  window.h
visualizer/config/: CMakeLists.txt  config.cpp  config.h
visualizer/config/file/: filebasedconfig.cpp
visualizer/config/network-tcp/: tcpconfig.cpp  tcpconfig.h
visualizer/cut/: CMakeLists.txt  cut.cpp  cut.h
visualizer/cut/hpp-loupe/: cuthpploupe.cpp  cuthpploupe.h
visualizer/cut/life/: lifecut.cpp  lifecut.h
visualizer/doc/: text.odt
visualizer/examples/: current
